--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ numpy
 joblib
 xgboost
 scikit-learn
+scipy
+pandas
+streamlit
+# tensorflow==2.15.0  # Only if you actually need TF, and only on Python ≤3.11
